@@ -116,6 +116,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|request
+operator|.
+name|SolrRequestInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|schema
 operator|.
 name|TrieFloatField
@@ -677,11 +691,6 @@ name|PostFilter
 implements|,
 name|ScoreFilter
 block|{
-DECL|field|cacheId
-specifier|private
-name|Object
-name|cacheId
-decl_stmt|;
 DECL|field|field
 specifier|private
 name|String
@@ -709,10 +718,13 @@ specifier|private
 name|int
 name|nullPolicy
 decl_stmt|;
-DECL|field|context
+DECL|field|boosted
 specifier|private
-name|Map
-name|context
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|boosted
 decl_stmt|;
 DECL|field|NULL_POLICY_IGNORE
 specifier|public
@@ -785,13 +797,68 @@ name|int
 name|hashCode
 parameter_list|()
 block|{
-return|return
-name|this
-operator|.
-name|cacheId
+name|int
+name|hashCode
+init|=
+name|field
 operator|.
 name|hashCode
 argument_list|()
+decl_stmt|;
+name|hashCode
+operator|=
+name|max
+operator|!=
+literal|null
+condition|?
+name|hashCode
+operator|+
+name|max
+operator|.
+name|hashCode
+argument_list|()
+else|:
+name|hashCode
+expr_stmt|;
+name|hashCode
+operator|=
+name|min
+operator|!=
+literal|null
+condition|?
+name|hashCode
+operator|+
+name|min
+operator|.
+name|hashCode
+argument_list|()
+else|:
+name|hashCode
+expr_stmt|;
+name|hashCode
+operator|=
+name|boosted
+operator|!=
+literal|null
+condition|?
+name|hashCode
+operator|+
+name|boosted
+operator|.
+name|hashCode
+argument_list|()
+else|:
+name|hashCode
+expr_stmt|;
+name|hashCode
+operator|=
+name|hashCode
+operator|+
+name|nullPolicy
+expr_stmt|;
+name|hashCode
+operator|=
+name|hashCode
 operator|*
 operator|(
 operator|(
@@ -810,6 +877,9 @@ operator|)
 operator|*
 literal|31
 operator|)
+expr_stmt|;
+return|return
+name|hashCode
 return|;
 block|}
 DECL|method|equals
@@ -821,7 +891,6 @@ name|Object
 name|o
 parameter_list|)
 block|{
-comment|//Uses the unique id for equals to ensure that the query result cache always fails.
 if|if
 condition|(
 name|o
@@ -837,16 +906,134 @@ name|CollapsingPostFilter
 operator|)
 name|o
 decl_stmt|;
-comment|//Do object comparison to be sure only the same object will return true.
 if|if
 condition|(
 name|this
 operator|.
-name|cacheId
+name|field
+operator|.
+name|equals
+argument_list|(
+name|c
+operator|.
+name|field
+argument_list|)
+operator|&&
+operator|(
+operator|(
+name|this
+operator|.
+name|max
+operator|==
+literal|null
+operator|&&
+name|c
+operator|.
+name|max
+operator|==
+literal|null
+operator|)
+operator|||
+operator|(
+name|this
+operator|.
+name|max
+operator|!=
+literal|null
+operator|&&
+name|c
+operator|.
+name|max
+operator|!=
+literal|null
+operator|&&
+name|this
+operator|.
+name|max
+operator|.
+name|equals
+argument_list|(
+name|c
+operator|.
+name|max
+argument_list|)
+operator|)
+operator|)
+operator|&&
+operator|(
+operator|(
+name|this
+operator|.
+name|min
+operator|==
+literal|null
+operator|&&
+name|c
+operator|.
+name|min
+operator|==
+literal|null
+operator|)
+operator|||
+operator|(
+name|this
+operator|.
+name|min
+operator|!=
+literal|null
+operator|&&
+name|c
+operator|.
+name|min
+operator|!=
+literal|null
+operator|&&
+name|this
+operator|.
+name|min
+operator|.
+name|equals
+argument_list|(
+name|c
+operator|.
+name|min
+argument_list|)
+operator|)
+operator|)
+operator|&&
+name|this
+operator|.
+name|nullPolicy
 operator|==
 name|c
 operator|.
-name|cacheId
+name|nullPolicy
+operator|&&
+operator|(
+operator|(
+name|this
+operator|.
+name|boosted
+operator|==
+literal|null
+operator|&&
+name|c
+operator|.
+name|boosted
+operator|==
+literal|null
+operator|)
+operator|||
+operator|(
+name|this
+operator|.
+name|boosted
+operator|==
+name|c
+operator|.
+name|boosted
+operator|)
+operator|)
 operator|&&
 name|this
 operator|.
@@ -919,14 +1106,6 @@ name|IOException
 block|{
 name|this
 operator|.
-name|cacheId
-operator|=
-operator|new
-name|Object
-argument_list|()
-expr_stmt|;
-name|this
-operator|.
 name|field
 operator|=
 name|localParams
@@ -957,15 +1136,6 @@ name|get
 argument_list|(
 literal|"min"
 argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|context
-operator|=
-name|request
-operator|.
-name|getContext
-argument_list|()
 expr_stmt|;
 if|if
 condition|(
@@ -1712,23 +1882,31 @@ operator|.
 name|size
 argument_list|()
 decl_stmt|;
-name|IntOpenHashSet
-name|boostDocs
+name|SolrRequestInfo
+name|info
 init|=
-name|getBoostDocs
-argument_list|(
-name|searcher
-argument_list|,
-call|(
+name|SolrRequestInfo
+operator|.
+name|getRequestInfo
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|boosted
+operator|=
+operator|(
 name|Set
 argument_list|<
 name|String
 argument_list|>
-call|)
-argument_list|(
-name|this
+operator|)
+name|info
 operator|.
-name|context
+name|getReq
+argument_list|()
+operator|.
+name|getContext
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -1736,7 +1914,17 @@ name|QueryElevationComponent
 operator|.
 name|BOOSTED
 argument_list|)
-argument_list|)
+expr_stmt|;
+name|IntOpenHashSet
+name|boostDocs
+init|=
+name|getBoostDocs
+argument_list|(
+name|searcher
+argument_list|,
+name|this
+operator|.
+name|boosted
 argument_list|)
 decl_stmt|;
 if|if
@@ -1980,14 +2168,9 @@ if|if
 condition|(
 name|this
 operator|.
-name|context
-operator|.
-name|containsKey
-argument_list|(
-name|QueryElevationComponent
-operator|.
-name|BOOSTED
-argument_list|)
+name|boosted
+operator|!=
+literal|null
 condition|)
 block|{
 return|return
